integration_tests/src/snapshots/integration_tests__mpl_core_tests__mpl_core_verified_creators_plugin.snap
---
source: integration_tests/src/mpl_core_tests.rs
assertion_line: 589
expression: response
snapshot_kind: text
---
{
  "interface": "MplCoreAsset",
  "id": "AGyjcG9mBfYJFMZiJVkXr4iX7re6vkQ1Fw5grukA6Hiu",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "lamports": 3386160,
  "executable": false,
  "rent_epoch": 18446744073709551615,
  "plugins": {
    "verified_creators": {
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "index": 0,
      "offset": 119,
      "data": {
        "signatures": []
      }
    }
  },
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": []
}
